Wed Nov 12 21:52:35 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Add gtk_menu_set_monitor.

Fri Oct 24 13:15:32 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/tmpl/gtktoolbar.sgml, gtk/tmpl/gtkseparatortoolitem.sgml:
	Mention the "expand" and "draw" trick for separator tool items.

Fri Oct 24 17:21:04 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/Makefile.am gtk/Makefile.am: Distribute generated
	man pages.

2003-10-23  Federico Mena Quintero  <federico@ximian.com>

	* gtk/tmpl/gtkfilechooser.sgml: Added the text for the initial
	section, and descriptions for the signals and enumerations.

	* gtk/tmpl/gtkfilechooserdialog.sgml: Added the text for the
	initial section, and a short example.

	* gtk/tmpl/gtkfilechooserwidget.sgml: Added the text for the
	initial section.

Fri Oct 24 00:25:07 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkfilefilter.sgml: 
	* gtk/tmpl/gtkfilechooser.sgml: 
	* gtk/tmpl/gtkfilechooserwidget.sgml: 
	* gtk/tmpl/gtkfilechooserdialog.sgml: Add short descriptions.

Thu Oct 23 22:41:02 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-docs.sgml: Move GtkCombo and GtkOptionMenu to
	the "Deprecated" chapter. Add GtkFileChooser, GtkFileChooserDialog,
	GtkFileChooseWidget and GtkFileFilter.

2003-10-23  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtk.types: Added gtk_file_chooser_get_type,
	gtk_file_chooser_dialog_get_type,
	gtk_file_chooser_widget_get_type, gtk_file_filter_get_type.

	* gtk/gtk-sections.txt: Added GtkFileChooser,
	GtkFileChooserWidget, GtkFileChooserDialog, GtkFileFilter.

	* gtk/Makefile.am (IGNORE_HFILES): Added gtkcellrendererseptext.h,
	gtkfilechooserdefault.h, gtkfilechooserentry.h,
	gtkfilechooserutils.h, gtkfilesystem.h, gtkfilesystemmodel.h,
	gtkfilesystemunix.h.

	* gtk/tmpl/gtkfilechooser.sgml: New template file.

	* gtk/tmpl/gtkfilechooserdialog.sgml: Likewise.

	* gtk/tmpl/gtkfilechooserwidget.sgml: Likewise.

	* gtk/tmpl/gtkfilefilter.sgml: Likewise.
